[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "warhawk-toolkit"
version = "0.1.0"
description = "Toolkit for extracting and converting Warhawk PS3 game files"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Dylan Buck" }
]
keywords = ["warhawk", "ps3", "psarc", "game", "modding", "extraction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]
dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
warhawk = "warhawk_toolkit.cli:main"

[project.urls]
Homepage = "https://github.com/dylanbuck/warhawk-toolkit"
Repository = "https://github.com/dylanbuck/warhawk-toolkit"

[tool.hatch.build.targets.wheel]
packages = ["warhawk_toolkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
